force-app/main/default/objects/Desenvolvedor__c/Desenvolvedor__c.object-meta.xml
<CustomObject>
    <description>Armazenar dados e conhecimentos dos desenvolvedores.</description>
    <label>Desenvolvedor</label>
    <nameField>
        <label>Desenvolvedor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Desenvolvedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>