force-app/main/default/objects/Desenvolvedor__c/fields/EstaAlocado__c.field-meta.xml
<CustomField>
    <fullName>EstaAlocado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Está Alocado</label>
    <type>Checkbox</type>
</CustomField>