force-app/main/default/objects/Desenvolvedor__c/fields/Experiencia__c.field-meta.xml
<CustomField>
    <fullName>Experiencia__c</fullName>
    <label>Experiência (Em Meses)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>