force-app/main/default/objects/Desenvolvedor__c/fields/Idiomas__c.field-meta.xml
<CustomField>
    <fullName>Idiomas__c</fullName>
    <label>Idiomas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alemão</fullName>
            </value>
            <value>
                <fullName>Chinês</fullName>
            </value>
            <value>
                <fullName>Espanhol</fullName>
            </value>
            <value>
                <fullName>Francês</fullName>
            </value>
            <value>
                <fullName>Inglês</fullName>
            </value>
            <value>
                <fullName>Japonês</fullName>
            </value>
            <value>
                <fullName>Português</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>