force-app/main/default/objects/Desenvolvedor__c/fields/Senioridade__c.field-meta.xml
<CustomField>
    <fullName>Senioridade__c</fullName>
    <formula>IF(Experiencia__c &lt;= 23,&quot;Junior&quot;,
  IF(Experiencia__c &lt;= 47,&quot;Pleno&quot;,&quot;Senior&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Senioridade</label>
    <type>Text</type>
</CustomField>