force-app/main/default/objects/Desenvolvedor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EstaAlocado__c</columns>
    <columns>Senioridade__c</columns>
    <columns>Tecnologia__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>